--- a/src/content/docs/guides/Beginners/Your First Shader/2_gbuffers.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/2_gbuffers.mdx
@@ -99,6 +99,9 @@ With those values being passed through, let's move onto the fragment shader (`gb
 ### `gtexture`
 This is the texture atlas we mentioned earlier. It contains the textures of all the blocks onscreen, and `texcoord` tells us where in the atlas the current fragment texture is.
 
+![](../../../../../assets/beginner_tutorial/textureatlas.webp)
+This is an example of what the texture atlas looks like, however it can vary.
+
 ### `lightmap`
 Remember how by default, Minecraft uses a texture with colors for each light level? This texture contains those colors. Since we aren't using the texture anymore, we can get rid of this line.
 
