--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -23,7 +23,9 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-<div class="bg-img"></div>
+import { BannerSlideShow } from '../../components/BannerSlideShow.astro'
+
+<BannerSlideShow />
 
 ## Get Started
 
