randomized background images

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -23,9 +23,9 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-import { BannerSlideShow } from '../../components/BannerSlideShow.astro'
+import BannerImage from '../../components/BannerImage.astro'
 
-<BannerSlideShow />
+<BannerImage />
 
 ## Get Started
 
