fix: buffers: R11F_G11F_B10F is supported by images

--- a/src/content/docs/reference/Buffers/texture_format.mdx
+++ b/src/content/docs/reference/Buffers/texture_format.mdx
@@ -14,7 +14,7 @@ The default format for color attachments is `RGBA` (which equates to `RGBA8` on 
 
 The available texture formats and their meanings are described below.
 
-> Cells marked with ~strikethrough~ are currently unsupported
+> Cells marked with ~strikethrough~ are currently unsupported.
 
 ## Normalized
 
@@ -71,7 +71,7 @@ Detailed explanation: [OpenGL Wiki - Small Float Formats](https://www.khronos.or
 | `RGBA16F`        | 4×16                                                                       | `RGBA`       | `HALF_FLOAT`                     | ✔️     |
 | `RGB32F`         | 3×32                                                                       | `RGB`        | `FLOAT`                          | ❌     |
 | `RGB16F`         | 3×16                                                                       | `RGB`        | `HALF_FLOAT`                     | ❌     |
-| `R11F_G11F_B10F` | 11/11/10                                                                   | `RGB`        | ~`UNSIGNED_INT_10F_11F_11F_REV`~ | ❌     |
+| `R11F_G11F_B10F` | 11/11/10                                                                   | `RGB`        | ~`UNSIGNED_INT_10F_11F_11F_REV`~ | ✔️     |
 | `RGB9_E5`        | [Special](https://www.khronos.org/opengl/wiki/Small_Float_Formats#RGB9_E5) | `RGB`        | ~`5_9_9_9_REV`~                  | ❌     |
 | `RG32F`          | 2×32                                                                       | `RG`         | `FLOAT`                          | ✔️     |
 | `RG16F`          | 2×16                                                                       | `RG`         | `HALF_FLOAT`                     | ✔️     |
