Updated uniform overview description, badge color

--- a/src/content/docs/reference/Uniforms/biome.mdx
+++ b/src/content/docs/reference/Uniforms/biome.mdx
@@ -8,7 +8,7 @@ sidebar:
 import { Badge } from '@astrojs/starlight/components';
 
 
-## biome <Badge text="Optifine Custom Uniforms / Iris" variant="caution" size="medium" />
+## biome <Badge text="Optifine Custom Uniforms / Iris" variant="note" size="medium" />
 ```glsl
 uniform int biome;
 ```
@@ -21,7 +21,7 @@ In Optifine, this value is only available to [custom uniforms](/reference/shader
 ----------------
 
 
-## biome_category <Badge text="Optifine Custom Uniforms / Iris" variant="caution" size="medium" />
+## biome_category <Badge text="Optifine Custom Uniforms / Iris" variant="note" size="medium" />
 ```glsl
 uniform int biome_category;
 ```
@@ -38,7 +38,7 @@ In Optifine, this value is only available to [custom uniforms](/reference/shader
 ----------------
 
 
-## biome_precipitation <Badge text="Optifine Custom Uniforms / Iris" variant="caution" size="medium" />
+## biome_precipitation <Badge text="Optifine Custom Uniforms / Iris" variant="note" size="medium" />
 ```glsl
 uniform int biome_precipitation;
 ```
@@ -51,7 +51,7 @@ In Optifine, this value is only available to [custom uniforms](/reference/shader
 ----------------
 
 
-## rainfall <Badge text="Optifine Custom Uniforms / Iris" variant="caution" size="medium" />
+## rainfall <Badge text="Optifine Custom Uniforms / Iris" variant="note" size="medium" />
 ```glsl
 uniform float rainfall;
 ```
@@ -62,7 +62,7 @@ In Optifine, this value is only available to [custom uniforms](/reference/shader
 ----------------
 
 
-## temperature <Badge text="Optifine Custom Uniforms / Iris" variant="caution" size="medium" />
+## temperature <Badge text="Optifine Custom Uniforms / Iris" variant="note" size="medium" />
 ```glsl
 uniform float temperature;
 ```
