--- a/src/content/docs/reference/Uniforms/status.mdx
+++ b/src/content/docs/reference/Uniforms/status.mdx
@@ -169,7 +169,7 @@ This value stores the maximum player hunger value, which is twice the number of 
 ----------------
 
 
-## is_burning <Badge text="Optifine Custom Uniforms / Iris" variant="caution" size="medium" />
+## is_burning <Badge text="Optifine Custom Uniforms / Iris" variant="note" size="medium" />
 ```glsl
 uniform bool is_burning;
 ```
@@ -180,7 +180,7 @@ In Optifine, this value is only available to [custom uniforms](/reference/shader
 ----------------
 
 
-## is_hurt <Badge text="Optifine Custom Uniforms / Iris" variant="caution" size="medium" />
+## is_hurt <Badge text="Optifine Custom Uniforms / Iris" variant="note" size="medium" />
 ```glsl
 uniform bool is_hurt;
 ```
@@ -191,7 +191,7 @@ In Optifine, this value is only available to [custom uniforms](/reference/shader
 ----------------
 
 
-## is_invisible <Badge text="Optifine Custom Uniforms / Iris" variant="caution" size="medium" />
+## is_invisible <Badge text="Optifine Custom Uniforms / Iris" variant="note" size="medium" />
 ```glsl
 uniform bool is_invisible;
 ```
@@ -202,7 +202,7 @@ In Optifine, this value is only available to [custom uniforms](/reference/shader
 ----------------
 
 
-## is_on_ground <Badge text="Optifine Custom Uniforms / Iris" variant="caution" size="medium" />
+## is_on_ground <Badge text="Optifine Custom Uniforms / Iris" variant="note" size="medium" />
 ```glsl
 uniform bool is_on_ground;
 ```
@@ -213,7 +213,7 @@ In Optifine, this value is only available to [custom uniforms](/reference/shader
 ----------------
 
 
-## is_sneaking <Badge text="Optifine Custom Uniforms / Iris" variant="caution" size="medium" />
+## is_sneaking <Badge text="Optifine Custom Uniforms / Iris" variant="note" size="medium" />
 ```glsl
 uniform bool is_sneaking;
 ```
@@ -224,7 +224,7 @@ In Optifine, this value is only available to [custom uniforms](/reference/shader
 ----------------
 
 
-## is_sprinting <Badge text="Optifine Custom Uniforms / Iris" variant="caution" size="medium" />
+## is_sprinting <Badge text="Optifine Custom Uniforms / Iris" variant="note" size="medium" />
 ```glsl
 uniform bool is_sprinting;
 ```
