--- a/src/content/docs/reference/Uniforms/overview.mdx
+++ b/src/content/docs/reference/Uniforms/overview.mdx
@@ -9,6 +9,8 @@ import { Badge } from '@astrojs/starlight/components';
 
 Uniforms are values sent from the CPU, and as such they cannot change from one shader invocation to the next within a render call. Most uniforms provided by Iris are constant across the entire frame, some values change between different geometry (such as [`renderstage`](/reference/uniforms/rendering#renderstage)).
 
+Below is an index of all Uniforms available in Iris. Uniforms marked as <Badge text="Iris Exclusive" variant="tip"/> are only available in Iris, and uniforms marked as <Badge text="Optifine CU / Iris" variant="note"/> are available in Optifine only through [custom uniforms](/reference/shadersproperties/custom_uniforms) but are available anywhere in Iris. Any unmarked uniforms is available in either Optifine or Iris.
+
 
 ## Camera/Player
 | Uniform                                                                               | Type  | Value Range  | Description                                                        | Tag                                          |
@@ -29,32 +31,32 @@ Uniforms are values sent from the CPU, and as such they cannot change from one s
 | [firstPersonCamera](/reference/uniforms/camera#firstpersoncamera)                     | bool  | true / false | Whether the player camera is in first person mode                  | <Badge text="Iris Exclusive" variant="tip"/> |
 
 ## Player Status
-| Uniform                                                               | Type  | Value Range    | Description                                                    | Tag                                                  |
-| --------------------------------------------------------------------- | ----- | -------------- | -------------------------------------------------------------- | ---------------------------------------------------- |
-| [isEyeInWater](/reference/uniforms/status#iseyeinwater)               | int   | 0, 1, 2, 3     | Fluid that the camera is currently in                          |                                                      |
-| [isSpectator](/reference/uniforms/status#isspectator)                 | bool  | true / false   | Whether the player is currently in spectator mode              | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [isRightHanded](/reference/uniforms/status#isrighthanded)             | bool  | true / false   | Whether the player's main hand is set to right hand            | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [blindness](/reference/uniforms/status#blindness)                     | float | [0,1]          | Blindness effect multiplier                                    |                                                      |
-| [darknessFactor](/reference/uniforms/status#darknessfactor)           | float | [0,1]          | Strength of the darkness effect                                |                                                      |
-| [darknessLightFactor](/reference/uniforms/status#darknesslightfactor) | float | [0,1]          | Strength of the dimming effect from the darkness status effect |                                                      |
-| [nightVision](/reference/uniforms/status#nightvision)                 | float | [0,1]          | Night vision effect multiplier                                 |                                                      |
-| [playerMood](/reference/uniforms/status#playermood)                   | float | [0,1]          | Player mood value                                              |                                                      |
-| [constantMood](/reference/uniforms/status#constantmood)               | float | [0,1]          | `playerMood` but it doesn't reset at `1.0`                     | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [currentPlayerAir](/reference/uniforms/status#currentplayerair)       | float | [0,1]          | Normalized air the player has remaining                        | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [maxPlayerAir](/reference/uniforms/status#maxplayerair)               | float | -1, 300        | Maximum player air when underwater                             | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [currentPlayerArmor](/reference/uniforms/status#currentplayerarmor)   | float | -1, [0,1]      | Normalized armor player has equipped                           | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [maxPlayerArmor](/reference/uniforms/status#maxplayerarmor)           | float | 50             | Maximum player armor value                                     | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [currentPlayerHealth](/reference/uniforms/status#currentplayerhealth) | float | -1, [0,1]      | Normalized health the player has remaining                     | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [maxPlayerHealth](/reference/uniforms/status#maxplayerhealth)         | float | -1, [20, 1024] | Maximum player health value                                    | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [currentPlayerHunger](/reference/uniforms/status#currentplayerhunger) | float | -1, [0,1]      | Normalized hunger level of player                              | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [maxPlayerHunger](/reference/uniforms/status#maxplayerhunger)         | float | 20             | Maximum player hunger value                                    | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [is_burning](/reference/uniforms/status#is_burning)                   | bool  | true / false   | Whether the player is currently on fire                        | <Badge text="Optifine CU / Iris" variant="caution"/> |
-| [is_hurt](/reference/uniforms/status#is_hurt)                         | bool  | true / false   | Whether the player is currently taking damage                  | <Badge text="Optifine CU / Iris" variant="caution"/> |
-| [is_invisible](/reference/uniforms/status#is_invisible)               | bool  | true / false   | Whether the player is invisible                                | <Badge text="Optifine CU / Iris" variant="caution"/> |
-| [is_on_ground](/reference/uniforms/status#is_on_ground)               | bool  | true / false   | Whether the player is currently touching the ground            | <Badge text="Optifine CU / Iris" variant="caution"/> |
-| [is_sneaking](/reference/uniforms/status#is_sneaking)                 | bool  | true / false   | Whether the player is currently sneaking                       | <Badge text="Optifine CU / Iris" variant="caution"/> |
-| [is_sprinting](/reference/uniforms/status#is_sprinting)               | bool  | true / false   | Whether the player is currently sprinting                      | <Badge text="Optifine CU / Iris" variant="caution"/> |
-| [hideGUI](/reference/uniforms/status#hidegui)                         | bool  | true / false   | Whether the player's GUI is hidden                             |                                                       |
+| Uniform                                                               | Type  | Value Range    | Description                                                    | Tag                                               |
+| --------------------------------------------------------------------- | ----- | -------------- | -------------------------------------------------------------- | ------------------------------------------------- |
+| [isEyeInWater](/reference/uniforms/status#iseyeinwater)               | int   | 0, 1, 2, 3     | Fluid that the camera is currently in                          |                                                   |
+| [isSpectator](/reference/uniforms/status#isspectator)                 | bool  | true / false   | Whether the player is currently in spectator mode              | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [isRightHanded](/reference/uniforms/status#isrighthanded)             | bool  | true / false   | Whether the player's main hand is set to right hand            | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [blindness](/reference/uniforms/status#blindness)                     | float | [0,1]          | Blindness effect multiplier                                    |                                                   |
+| [darknessFactor](/reference/uniforms/status#darknessfactor)           | float | [0,1]          | Strength of the darkness effect                                |                                                   |
+| [darknessLightFactor](/reference/uniforms/status#darknesslightfactor) | float | [0,1]          | Strength of the dimming effect from the darkness status effect |                                                   |
+| [nightVision](/reference/uniforms/status#nightvision)                 | float | [0,1]          | Night vision effect multiplier                                 |                                                   |
+| [playerMood](/reference/uniforms/status#playermood)                   | float | [0,1]          | Player mood value                                              |                                                   |
+| [constantMood](/reference/uniforms/status#constantmood)               | float | [0,1]          | `playerMood` but it doesn't reset at `1.0`                     | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [currentPlayerAir](/reference/uniforms/status#currentplayerair)       | float | [0,1]          | Normalized air the player has remaining                        | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [maxPlayerAir](/reference/uniforms/status#maxplayerair)               | float | -1, 300        | Maximum player air when underwater                             | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [currentPlayerArmor](/reference/uniforms/status#currentplayerarmor)   | float | -1, [0,1]      | Normalized armor player has equipped                           | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [maxPlayerArmor](/reference/uniforms/status#maxplayerarmor)           | float | 50             | Maximum player armor value                                     | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [currentPlayerHealth](/reference/uniforms/status#currentplayerhealth) | float | -1, [0,1]      | Normalized health the player has remaining                     | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [maxPlayerHealth](/reference/uniforms/status#maxplayerhealth)         | float | -1, [20, 1024] | Maximum player health value                                    | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [currentPlayerHunger](/reference/uniforms/status#currentplayerhunger) | float | -1, [0,1]      | Normalized hunger level of player                              | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [maxPlayerHunger](/reference/uniforms/status#maxplayerhunger)         | float | 20             | Maximum player hunger value                                    | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [is_burning](/reference/uniforms/status#is_burning)                   | bool  | true / false   | Whether the player is currently on fire                        | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [is_hurt](/reference/uniforms/status#is_hurt)                         | bool  | true / false   | Whether the player is currently taking damage                  | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [is_invisible](/reference/uniforms/status#is_invisible)               | bool  | true / false   | Whether the player is invisible                                | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [is_on_ground](/reference/uniforms/status#is_on_ground)               | bool  | true / false   | Whether the player is currently touching the ground            | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [is_sneaking](/reference/uniforms/status#is_sneaking)                 | bool  | true / false   | Whether the player is currently sneaking                       | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [is_sprinting](/reference/uniforms/status#is_sprinting)               | bool  | true / false   | Whether the player is currently sprinting                      | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [hideGUI](/reference/uniforms/status#hidegui)                         | bool  | true / false   | Whether the player's GUI is hidden                             |                                                   |
 
 ## Screen/System
 | Uniform                                                           | Type  | Value Range   | Description                                                    | Tag                                          |
@@ -103,20 +105,20 @@ Uniforms are values sent from the CPU, and as such they cannot change from one s
 | [eyeBrightnessSmooth](/reference/uniforms/world#eyebrightnesssmooth)     | ivec2 | [0-240]     | `eyeBrightness` smoothed over time by `eyeBrightnessHalfLife` |                                              |
 
 ## Biome/Dimension
-| Uniform                                                              | Type  | Value Range   | Description                                                         | Tag                                                  |
-| -------------------------------------------------------------------- | ----- | ------------- | ------------------------------------------------------------------- | ---------------------------------------------------- |
-| [biome](/reference/uniforms/biome#biome)                             | int   |               | Biome currently occupied by the player                              | <Badge text="Optifine CU / Iris" variant="caution"/> |
-| [biome_category](/reference/uniforms/biome#biome_category)           | int   |               | Category of the biome currently occupied by the player              | <Badge text="Optifine CU / Iris" variant="caution"/> |
-| [biome_precipitation](/reference/uniforms/biome#biome_precipitation) | int   | 0, 1, 2       | Type of precipitation in the current biome                          | <Badge text="Optifine CU / Iris" variant="caution"/> |
-| [rainfall](/reference/uniforms/biome#rainfall)                       | float | [0,1]         | Rainfall property of the current biome                              | <Badge text="Optifine CU / Iris" variant="caution"/> |
-| [temperature](/reference/uniforms/biome#temperature)                 | float |               | Temperature property of the current biome                           | <Badge text="Optifine CU / Iris" variant="caution"/> |
-| [ambientLight](/reference/uniforms/biome#ambientlight)               | float | [0,1]         | Ambient light property of the current dimension                     | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [bedrockLevel](/reference/uniforms/biome#bedrocklevel)               | int   | [-2032, 2016] | Y coordinate of the bedrock floor in the current dimension          | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [cloudHeight](/reference/uniforms/biome#cloudheight)                 | float |               | Y coordinate of the vanilla cloud plane                             | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [hasCeiling](/reference/uniforms/biome#hasceiling)                   | bool  | true / false  | Whether the current dimension has a ceiling                         | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [hasSkylight](/reference/uniforms/biome#hasskylight)                 | bool  | true / false  | Whether the current dimension has sky lighting                      | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [heightLimit](/reference/uniforms/biome#heightlimit)                 | int   | [16, 4064]    | Distance from maximum to minimum block heights in current dimension | <Badge text="Iris Exclusive" variant="tip"/>         |
-| [logicalHeightLimit](/reference/uniforms/biome#logicalheightlimit)   | int   |               | Logical height of the current dimension                             | <Badge text="Iris Exclusive" variant="tip"/>         |
+| Uniform                                                              | Type  | Value Range   | Description                                                         | Tag                                               |
+| -------------------------------------------------------------------- | ----- | ------------- | ------------------------------------------------------------------- | ------------------------------------------------- |
+| [biome](/reference/uniforms/biome#biome)                             | int   |               | Biome currently occupied by the player                              | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [biome_category](/reference/uniforms/biome#biome_category)           | int   |               | Category of the biome currently occupied by the player              | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [biome_precipitation](/reference/uniforms/biome#biome_precipitation) | int   | 0, 1, 2       | Type of precipitation in the current biome                          | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [rainfall](/reference/uniforms/biome#rainfall)                       | float | [0,1]         | Rainfall property of the current biome                              | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [temperature](/reference/uniforms/biome#temperature)                 | float |               | Temperature property of the current biome                           | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [ambientLight](/reference/uniforms/biome#ambientlight)               | float | [0,1]         | Ambient light property of the current dimension                     | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [bedrockLevel](/reference/uniforms/biome#bedrocklevel)               | int   | [-2032, 2016] | Y coordinate of the bedrock floor in the current dimension          | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [cloudHeight](/reference/uniforms/biome#cloudheight)                 | float |               | Y coordinate of the vanilla cloud plane                             | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [hasCeiling](/reference/uniforms/biome#hasceiling)                   | bool  | true / false  | Whether the current dimension has a ceiling                         | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [hasSkylight](/reference/uniforms/biome#hasskylight)                 | bool  | true / false  | Whether the current dimension has sky lighting                      | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [heightLimit](/reference/uniforms/biome#heightlimit)                 | int   | [16, 4064]    | Distance from maximum to minimum block heights in current dimension | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [logicalHeightLimit](/reference/uniforms/biome#logicalheightlimit)   | int   |               | Logical height of the current dimension                             | <Badge text="Iris Exclusive" variant="tip"/>      |
 
 ## Rendering
 | Uniform                                                    | Type  | Value Range      | Description                                                       | Tag |
