--- a/src/content/docs/reference/Buffers/texture_format.mdx
+++ b/src/content/docs/reference/Buffers/texture_format.mdx
@@ -8,13 +8,13 @@ sidebar:
 
 import { Aside } from '@astrojs/starlight/components';
 
-Color attachments such as [colortex](/reference/buffers/colortex) and [shadowcolor](/reference/buffers/shadowcolor) buffers, as well as [images](/reference/buffers/custom_images/) and [textures](/reference/buffers/custom_textures/), store values in a specific format.
+Color attachments such as [colortex](/reference/buffers/colortex) and [shadowcolor](/reference/buffers/shadowcolor) buffers, as well as custom [images](/reference/buffers/custom_images/) and [textures](/reference/buffers/custom_textures/), store values in a specific format.
 
 The default format for color attachments is `RGBA` (which equates to `RGBA8` on most systems). However, a shader pack can specify the format using the [\<bufferName\>Format](/reference/constants/buffer_format) directive.
 
 The available texture formats and their meanings are described below.
 
-> Cells marked with ~strikethrough~ are currently unsupported.
+> Items marked with ~strikethrough~ are currently unsupported. All supported pixel formats and types can be used for loading [raw custom textures](https://shaders.properties/reference/buffers/custom_textures/#texturestagebuffername--path-type-internalformat-dimensions-pixelformat-pixeltype) (even if their associated image formats are unsupported, in which case the data will have to be converted to a supported image format of your choice). All supported image formats can also be used with color attachments.
 
 ## Normalized
 
@@ -85,8 +85,10 @@ The `RGB9_E5` format uses a 5-bit exponent for all three terms (R, G, and B), wh
 | Bit Depth | Signed Min  | Signed Max | Unsigned Max |
 | --------- | ----------- | ---------- | ------------ |
 | 32        | -2147483648 | 2147483647 | 4294967295   |
+| 10        | -512        | 511        | 1023         |
 | 16        | -32768      | 32767      | 65535        |
 | 8         | -128        | 127        | 255          |
+| 2         | -2          | 1          | 3            |
 
 ### Unsigned Integral Formats
 
@@ -129,17 +131,17 @@ Signed integral buffers store signed integers, just like the tin says. These are
 
 ## Additional Pixel Types
 
-The shader loader supports some additional pixel types not directly associated with supported image formats. See the [OpenGL Wiki](https://www.khronos.org/opengl/wiki/Pixel_Transfer#Pixel_type) for more information about these.
+The shader loader supports some additional pixel types, not directly associated with specific image formats, that can be used when loading [raw custom textures](https://shaders.properties/reference/buffers/custom_textures/#texturestagebuffername--path-type-internalformat-dimensions-pixelformat-pixeltype). See the [OpenGL Wiki](https://www.khronos.org/opengl/wiki/Pixel_Transfer#Pixel_type) for more information about these.
 
-| Pixel Type                   |
-| ---------------------------- |
-| `UNSIGNED_BYTE_3_3_2`        |
-| `UNSIGNED_SHORT_5_6_5`       |
-| `UNSIGNED_SHORT_4_4_4_4`     |
-| `UNSIGNED_SHORT_5_5_5_1`     |
-| `UNSIGNED_INT_8_8_8_8`       |
-| `UNSIGNED_INT_8_8_8_8_REV`   |
-| `UNSIGNED_INT_10_10_10_2`    |
+| Pixel Type                 |
+| -------------------------- |
+| `UNSIGNED_BYTE_3_3_2`      |
+| `UNSIGNED_SHORT_5_6_5`     |
+| `UNSIGNED_SHORT_4_4_4_4`   |
+| `UNSIGNED_SHORT_5_5_5_1`   |
+| `UNSIGNED_INT_8_8_8_8`     |
+| `UNSIGNED_INT_8_8_8_8_REV` |
+| `UNSIGNED_INT_10_10_10_2`  |
 
 ## Further Reading
 * [OpenGL Wiki - Image Format](https://www.khronos.org/opengl/wiki/Image_Format)
