Add uniform category descriptions, move eyeBrightness

--- a/src/content/docs/reference/Uniforms/biome.mdx
+++ b/src/content/docs/reference/Uniforms/biome.mdx
@@ -7,6 +7,8 @@ sidebar:
 ---
 import { Badge } from '@astrojs/starlight/components';
 
+These uniforms store information about the current biome and dimension.
+
 
 ## biome <Badge text="Optifine Custom Uniforms / Iris" variant="note" size="medium" />
 ```glsl
