--- a/src/content/docs/reference/Uniforms/matrices.mdx
+++ b/src/content/docs/reference/Uniforms/matrices.mdx
@@ -6,6 +6,8 @@ sidebar:
   order: 9
 ---
 
+These uniforms store matrices used for converting between coordinate spaces. More info on the coordinate spaces used in Iris can be found in the [Coordinate Spaces](/how_to/coordinate_spaces) page.
+
 
 ## gbufferModelView
 ```glsl
