--- a/src/content/docs/reference/Uniforms/system.mdx
+++ b/src/content/docs/reference/Uniforms/system.mdx
@@ -7,6 +7,8 @@ sidebar:
 ---
 import { Badge } from '@astrojs/starlight/components';
 
+These uniforms store information about the system running the shader, as well as screen related parameters and users options.
+
 
 ## viewHeight
 ```glsl
