--- a/src/content/docs/reference/Uniforms/camera.mdx
+++ b/src/content/docs/reference/Uniforms/camera.mdx
@@ -7,6 +7,8 @@ sidebar:
 ---
 import { Badge } from '@astrojs/starlight/components';
 
+These uniforms store information about the camera and player model, including camera/player position, first person camera settings, and lighting values at the camera, and more.
+
 
 ## cameraPosition
 ```glsl
@@ -116,6 +118,24 @@ This value stores the world aligned direction the player model's head is facing.
 uniform vec3 upPosition;
 ```
 This uniform stores the vector pointing upwards (in the world) in [view space](/how_to/spaces). This value can also be pulled from [`gbufferModelView[1].xyz`](/reference/uniforms/matrices#gbuffermodelview). The length of this adds up to 100 (`normalizedValue * 100`).
+
+----------------
+
+
+## eyeBrightness
+```glsl
+uniform ivec2 eyeBrightness;
+```
+The lightmap value at the player's location. The `x` component stores the block light and the `y` component stores the sky light. The value is stored in the range [0-240].
+
+----------------
+
+
+## eyeBrightnessSmooth
+```glsl
+uniform ivec2 eyeBrightnessSmooth;
+```
+This uniform stores the value of [`eyeBrightness`](/reference/uniforms/camera#eyebrightness), smoothed over time. The speed of the smoothing can be controlled with [`eyeBrightnessHalflife`](/reference/constants/eyebrightnesshalflife).
 
 ----------------
 
