--- a/src/content/docs/reference/Uniforms/id.mdx
+++ b/src/content/docs/reference/Uniforms/id.mdx
@@ -7,6 +7,8 @@ sidebar:
 ---
 import { Badge } from '@astrojs/starlight/components';
 
+These uniforms store block, item, and entity IDs in different scenarios, as well as properties related to those. More information on IDs can be found in the [block.properties](/reference/miscellaneous/block_properties), [item.properties](/reference/miscellaneous/item_properties), and [entity.properties](/reference/miscellaneous/entity_properties) pages.
+
 
 ## entityId
 ```glsl
@@ -83,7 +85,7 @@ uniform int heldBlockLightValue;
 ```
 The light strength of the item held in the player's hand. This ranges from `0`-`15` for vanilla blocks, however some modded blocks may have a higher value.
 
-**Note:** if [`oldHandLight`](/reference/shadersproperties/oldhandlight) is not set to `false`, `heldBlockLightValue` will take its value from the hand with the highest light value for legacy support.
+**Note:** if [`oldHandLight`](/reference/shadersproperties/options#oldhandlight) is not set to `false`, `heldBlockLightValue` will take its value from the hand with the highest light value for legacy support.
 
 ----------------
 
