--- a/src/content/docs/reference/Uniforms/overview.mdx
+++ b/src/content/docs/reference/Uniforms/overview.mdx
@@ -26,37 +26,39 @@ Below is an index of all Uniforms available in Iris. Uniforms marked as <Badge t
 | [relativeEyePosition](/reference/uniforms/camera#relativeeyeposition)                 | vec3  |              | World space offset from the player head to the camera              | <Badge text="Iris Exclusive" variant="tip"/> |
 | [playerBodyVector](/reference/uniforms/camera#playerbodyvector)                       | vec3  | [0,1]        | World aligned direction of player model's body                     | <Badge text="Iris Exclusive" variant="tip"/> |
 | [playerLookVector](/reference/uniforms/camera#playerlookvector)                       | vec3  | [0,1]        | World aligned direction of player model's head                     | <Badge text="Iris Exclusive" variant="tip"/> |
-| [upPosition](/reference/uniforms/camera#upposition)                                   | vec3  | [0,100]      | Upwards direction in view space, length of 100                     |                                              |
+| [upPosition](/reference/uniforms/camera#upposition)                                   | vec3  | [0, 100]     | Upwards direction in view space, length of 100                     |                                              |
+| [eyeBrightness](/reference/uniforms/camera#eyebrightness)                             | ivec2 | [0, 240]     | Light value at the player's location: (block, sky)                 |                                              |
+| [eyeBrightnessSmooth](/reference/uniforms/camera#eyebrightnesssmooth)                 | ivec2 | [0, 240]     | `eyeBrightness` smoothed over time by `eyeBrightnessHalfLife`      |                                              |
 | [centerDepthSmooth](/reference/uniforms/camera#centerdepthsmooth)                     | float | [0,1]        | Depth buffer value at the center of the screen, smoothed over time |                                              |
 | [firstPersonCamera](/reference/uniforms/camera#firstpersoncamera)                     | bool  | true / false | Whether the player camera is in first person mode                  | <Badge text="Iris Exclusive" variant="tip"/> |
 
 ## Player Status
-| Uniform                                                               | Type  | Value Range    | Description                                                    | Tag                                               |
-| --------------------------------------------------------------------- | ----- | -------------- | -------------------------------------------------------------- | ------------------------------------------------- |
-| [isEyeInWater](/reference/uniforms/status#iseyeinwater)               | int   | 0, 1, 2, 3     | Fluid that the camera is currently in                          |                                                   |
-| [isSpectator](/reference/uniforms/status#isspectator)                 | bool  | true / false   | Whether the player is currently in spectator mode              | <Badge text="Iris Exclusive" variant="tip"/>      |
-| [isRightHanded](/reference/uniforms/status#isrighthanded)             | bool  | true / false   | Whether the player's main hand is set to right hand            | <Badge text="Iris Exclusive" variant="tip"/>      |
-| [blindness](/reference/uniforms/status#blindness)                     | float | [0,1]          | Blindness effect multiplier                                    |                                                   |
-| [darknessFactor](/reference/uniforms/status#darknessfactor)           | float | [0,1]          | Strength of the darkness effect                                |                                                   |
-| [darknessLightFactor](/reference/uniforms/status#darknesslightfactor) | float | [0,1]          | Strength of the dimming effect from the darkness status effect |                                                   |
-| [nightVision](/reference/uniforms/status#nightvision)                 | float | [0,1]          | Night vision effect multiplier                                 |                                                   |
-| [playerMood](/reference/uniforms/status#playermood)                   | float | [0,1]          | Player mood value                                              |                                                   |
-| [constantMood](/reference/uniforms/status#constantmood)               | float | [0,1]          | `playerMood` but it doesn't reset at `1.0`                     | <Badge text="Iris Exclusive" variant="tip"/>      |
-| [currentPlayerAir](/reference/uniforms/status#currentplayerair)       | float | [0,1]          | Normalized air the player has remaining                        | <Badge text="Iris Exclusive" variant="tip"/>      |
-| [maxPlayerAir](/reference/uniforms/status#maxplayerair)               | float | -1, 300        | Maximum player air when underwater                             | <Badge text="Iris Exclusive" variant="tip"/>      |
-| [currentPlayerArmor](/reference/uniforms/status#currentplayerarmor)   | float | -1, [0,1]      | Normalized armor player has equipped                           | <Badge text="Iris Exclusive" variant="tip"/>      |
-| [maxPlayerArmor](/reference/uniforms/status#maxplayerarmor)           | float | 50             | Maximum player armor value                                     | <Badge text="Iris Exclusive" variant="tip"/>      |
-| [currentPlayerHealth](/reference/uniforms/status#currentplayerhealth) | float | -1, [0,1]      | Normalized health the player has remaining                     | <Badge text="Iris Exclusive" variant="tip"/>      |
-| [maxPlayerHealth](/reference/uniforms/status#maxplayerhealth)         | float | -1, [20, 1024] | Maximum player health value                                    | <Badge text="Iris Exclusive" variant="tip"/>      |
-| [currentPlayerHunger](/reference/uniforms/status#currentplayerhunger) | float | -1, [0,1]      | Normalized hunger level of player                              | <Badge text="Iris Exclusive" variant="tip"/>      |
-| [maxPlayerHunger](/reference/uniforms/status#maxplayerhunger)         | float | 20             | Maximum player hunger value                                    | <Badge text="Iris Exclusive" variant="tip"/>      |
-| [is_burning](/reference/uniforms/status#is_burning)                   | bool  | true / false   | Whether the player is currently on fire                        | <Badge text="Optifine CU / Iris" variant="note"/> |
-| [is_hurt](/reference/uniforms/status#is_hurt)                         | bool  | true / false   | Whether the player is currently taking damage                  | <Badge text="Optifine CU / Iris" variant="note"/> |
-| [is_invisible](/reference/uniforms/status#is_invisible)               | bool  | true / false   | Whether the player is invisible                                | <Badge text="Optifine CU / Iris" variant="note"/> |
-| [is_on_ground](/reference/uniforms/status#is_on_ground)               | bool  | true / false   | Whether the player is currently touching the ground            | <Badge text="Optifine CU / Iris" variant="note"/> |
-| [is_sneaking](/reference/uniforms/status#is_sneaking)                 | bool  | true / false   | Whether the player is currently sneaking                       | <Badge text="Optifine CU / Iris" variant="note"/> |
-| [is_sprinting](/reference/uniforms/status#is_sprinting)               | bool  | true / false   | Whether the player is currently sprinting                      | <Badge text="Optifine CU / Iris" variant="note"/> |
-| [hideGUI](/reference/uniforms/status#hidegui)                         | bool  | true / false   | Whether the player's GUI is hidden                             |                                                   |
+| Uniform                                                               | Type  | Value Range   | Description                                                    | Tag                                               |
+| --------------------------------------------------------------------- | ----- | ------------- | -------------------------------------------------------------- | ------------------------------------------------- |
+| [isEyeInWater](/reference/uniforms/status#iseyeinwater)               | int   | 0, 1, 2, 3    | Fluid that the camera is currently in                          |                                                   |
+| [isSpectator](/reference/uniforms/status#isspectator)                 | bool  | true / false  | Whether the player is currently in spectator mode              | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [isRightHanded](/reference/uniforms/status#isrighthanded)             | bool  | true / false  | Whether the player's main hand is set to right hand            | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [blindness](/reference/uniforms/status#blindness)                     | float | [0,1]         | Blindness effect multiplier                                    |                                                   |
+| [darknessFactor](/reference/uniforms/status#darknessfactor)           | float | [0,1]         | Strength of the darkness effect                                |                                                   |
+| [darknessLightFactor](/reference/uniforms/status#darknesslightfactor) | float | [0,1]         | Strength of the dimming effect from the darkness status effect |                                                   |
+| [nightVision](/reference/uniforms/status#nightvision)                 | float | [0,1]         | Night vision effect multiplier                                 |                                                   |
+| [playerMood](/reference/uniforms/status#playermood)                   | float | [0,1]         | Player mood value                                              |                                                   |
+| [constantMood](/reference/uniforms/status#constantmood)               | float | [0,1]         | `playerMood` but it doesn't reset at `1.0`                     | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [currentPlayerAir](/reference/uniforms/status#currentplayerair)       | float | [0,1]         | Normalized air the player has remaining                        | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [maxPlayerAir](/reference/uniforms/status#maxplayerair)               | float | -1, 300       | Maximum player air when underwater                             | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [currentPlayerArmor](/reference/uniforms/status#currentplayerarmor)   | float | -1, [0,1]     | Normalized armor player has equipped                           | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [maxPlayerArmor](/reference/uniforms/status#maxplayerarmor)           | float | 50            | Maximum player armor value                                     | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [currentPlayerHealth](/reference/uniforms/status#currentplayerhealth) | float | -1, [0,1]     | Normalized health the player has remaining                     | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [maxPlayerHealth](/reference/uniforms/status#maxplayerhealth)         | float | -1, [0, 1024] | Maximum player health value                                    | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [currentPlayerHunger](/reference/uniforms/status#currentplayerhunger) | float | -1, [0,1]     | Normalized hunger level of player                              | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [maxPlayerHunger](/reference/uniforms/status#maxplayerhunger)         | float | 20            | Maximum player hunger value                                    | <Badge text="Iris Exclusive" variant="tip"/>      |
+| [is_burning](/reference/uniforms/status#is_burning)                   | bool  | true / false  | Whether the player is currently on fire                        | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [is_hurt](/reference/uniforms/status#is_hurt)                         | bool  | true / false  | Whether the player is currently taking damage                  | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [is_invisible](/reference/uniforms/status#is_invisible)               | bool  | true / false  | Whether the player is invisible                                | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [is_on_ground](/reference/uniforms/status#is_on_ground)               | bool  | true / false  | Whether the player is currently touching the ground            | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [is_sneaking](/reference/uniforms/status#is_sneaking)                 | bool  | true / false  | Whether the player is currently sneaking                       | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [is_sprinting](/reference/uniforms/status#is_sprinting)               | bool  | true / false  | Whether the player is currently sprinting                      | <Badge text="Optifine CU / Iris" variant="note"/> |
+| [hideGUI](/reference/uniforms/status#hidegui)                         | bool  | true / false  | Whether the player's GUI is hidden                             |                                                   |
 
 ## Screen/System
 | Uniform                                                           | Type  | Value Range   | Description                                                    | Tag                                          |
@@ -101,8 +103,6 @@ Below is an index of all Uniforms available in Iris. Uniforms marked as <Badge t
 | [lightningBoltPosition](/reference/uniforms/world#lightningboltposition) | vec4  |             | Position of a lightning bolt being rendered, or `vec4(0.0)`   | <Badge text="Iris Exclusive" variant="tip"/> |
 | [worldTime](/reference/uniforms/world#worldtime)                         | int   | [0, 23999]  | Current in-game time                                          |                                              |
 | [worldDay](/reference/uniforms/world#worldday)                           | int   | [0 - )      | Number of in-game days passed                                 |                                              |
-| [eyeBrightness](/reference/uniforms/world#eyebrightness)                 | ivec2 | [0-240]     | Light value at the player's location: (block, sky)            |                                              |
-| [eyeBrightnessSmooth](/reference/uniforms/world#eyebrightnesssmooth)     | ivec2 | [0-240]     | `eyeBrightness` smoothed over time by `eyeBrightnessHalfLife` |                                              |
 
 ## Biome/Dimension
 | Uniform                                                              | Type  | Value Range   | Description                                                         | Tag                                               |
