--- a/src/content/docs/reference/Uniforms/status.mdx
+++ b/src/content/docs/reference/Uniforms/status.mdx
@@ -7,6 +7,8 @@ sidebar:
 ---
 import { Badge } from '@astrojs/starlight/components';
 
+These uniforms store information about the status of the player in the world, including gamemode, potion/status effects, current health/hunger/etc, user options related to the player, and more.
+
 
 ## isEyeInWater
 ```glsl
