--- a/src/content/docs/reference/Buffers/shadowcolor.mdx
+++ b/src/content/docs/reference/Buffers/shadowcolor.mdx
@@ -28,7 +28,7 @@ These buffers default `RGBA` format (which defaults to `RGBA8` on most systems),
 By default these buffers clear their values after each frame to solid white (all 1s including alpha) This clearing behavior can be configured with the [`shadowcolorNClear`](/reference/constants/buffer_clear) directive, and the clear color can be configured with the [`shadowcolorNClearColor`](/reference/constants/buffer_clear_color) directive.
 
 #### Ping-Pong buffers
-Each colortex sampler actually contains two buffers, which allows you to read and write to the same buffer in a composite/deferred pass. The buffer flipping behavior can be controlled with the [`flip.<program>.<buffer>`](/reference/shadersproperties/buffer_flip) directive.
+Each colortex sampler actually contains two buffers, which allows you to read and write to the same buffer in a composite/deferred pass. The buffer flipping behavior can be controlled with the [`flip.<program>.<buffer>`](/reference/shadersproperties/rendering#flip) directive.
 
 #### Legacy Alias
 The sampler `shadowcolor0` is also accessible through the legacy `shadowcolor` alias.
