--- a/src/content/docs/reference/Uniforms/rendering.mdx
+++ b/src/content/docs/reference/Uniforms/rendering.mdx
@@ -33,7 +33,7 @@ The current render distance in blocks. Despite the name, this is not the far cli
 ```glsl
 uniform float alphaTestRef;
 ```
-This value stores the alpha value that Iris recommends you discard pixels bellow. This value is commonly `0.1`, but can change in certain cases (therefore it is recommended to use the uniform over a hardcoded value). The value is also affected by the [`alphaTest`](/reference/shadersproperties/alphatest) directive. It is normally used like this:
+This value stores the alpha value that Iris recommends you discard pixels bellow. This value is commonly `0.1`, but can change in certain cases (therefore it is recommended to use the uniform over a hardcoded value). The value is also affected by the [`alphaTest`](/reference/shadersproperties/rendering#alphatest) directive. It is normally used like this:
 ```glsl
 if (albedoOut.a < alphaTestRef) discard;
 ```
